--- a/dataline_config.json
+++ b/dataline_config.json
@@ -1,7 +1,7 @@
 {
     "datalines": [
         {
-            "name": "Ist",
+            "name": "Druck",
             "index": 0,
             "visible": true
         },
