Add sampling frequency parameter to configuration and update plot settings logic

--- a/parameter_config.json
+++ b/parameter_config.json
@@ -33,6 +33,11 @@
                     "name": "Timestep (s)",
                     "type": "float",
                     "value": 1e-3
+                },
+                {
+                    "name": "Sampling Frequency (Hz)",
+                    "type": "int",
+                    "value": 1000
                 }
             ]
         },
