--- a/dataline_config.json
+++ b/dataline_config.json
@@ -1,32 +1,32 @@
 {
     "datalines": [
         {
-            "name": "Druck",
+            "name": "Line 1",
             "index": 0,
             "visible": true
         },
         {
-            "name": "Soll",
+            "name": "Line 2",
             "index": 1,
             "visible": true
         },
         {
-            "name": "Referenz",
+            "name": "Line 3",
             "index": 2,
             "visible": true
         },
         {
-            "name": "Ventil",
+            "name": "Line 4",
             "index": 3,
             "visible": true
         },
         {
-            "name": "Ventil Manschette",
+            "name": "Line 5",
             "index": 4,
             "visible": true
         },
         {
-            "name": "Sampling_Parameters",
+            "name": "Line 6",
             "index": 5,
             "visible": true
         }
