Rename dataline entries in configuration: update "Line 1" to "Time", "Line 2" to "HighSense", "Line 3" to "DiffSense", and "Line 4" to "LowSense".

--- a/dataline_config.json
+++ b/dataline_config.json
@@ -1,22 +1,22 @@
 {
     "datalines": [
         {
-            "name": "Line 1",
+            "name": "Time",
             "index": 0,
             "visible": true
         },
         {
-            "name": "Line 2",
+            "name": "HighSense",
             "index": 1,
             "visible": true
         },
         {
-            "name": "Line 3",
+            "name": "DiffSense",
             "index": 2,
             "visible": true
         },
         {
-            "name": "Line 4",
+            "name": "LowSense",
             "index": 3,
             "visible": true
         },
